--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unisharebot",
+  "name": "clownbot",
   "version": "1.4.2",
-  "description": "unisharebot",
+  "description": "A clown bot to cheer up conversations in own chat groups",
   "main": "bot.js",
   "scripts": {
     "start": "pm2 -o ./logs/debug.log -e ./logs/errors.log start bot.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/derogab/unisharebot.git"
+    "url": "https://github.com/derogab/clownbot.git"
   },
   "keywords": [
     "bot",
@@ -18,7 +18,7 @@
   ],
   "author": "derogab",
   "bugs": {
-    "url": "https://github.com/derogab/unisharebot/issues"
+    "url": "https://github.com/derogab/clownbot/issues"
   },
   "dependencies": {
     "fs": "0.0.1-security",
