--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clownbot",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A clown bot to cheer up conversations in own chat groups",
   "main": "bot.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "bot",
-    "unishare",
+    "clown",
     "telegram"
   ],
   "author": "derogab",
