--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "fs": "0.0.1-security",
-    "giphy-api": "^2.0.1",
-    "pm2": "^4.4.0",
-    "telegraf": "^3.14.1",
-    "yaml": "^1.10.0"
+    "giphy-api": "^2.0.2",
+    "telegraf": "^3.39.0",
+    "yaml": "^1.10.2"
   },
   "engines": {
     "node": ">=8.1.3"
+  },
+  "devDependencies": {
+    "pm2": "^4.4.0"
   }
 }
