--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
     directory: '/'
     target-branch: 'dev'
     schedule:
-      interval: 'weekly'
+      interval: 'daily'
     assignees:
       - 'derogab'
     labels:
@@ -22,7 +22,7 @@ updates:
     directory: '/'
     target-branch: 'dev'
     schedule:
-      interval: 'weekly'
+      interval: 'daily'
     assignees:
       - 'derogab'
     labels:
