--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   clownbot:
     container_name: clownbot
-    image: ghcr.io/derogab/clownbot
+    image: derogab/clownbot:latest
     restart: always
     volumes:
       - './private:/bot/private'
