--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "fs": "0.0.1-security",
-    "giphy-api": "^2.0.2",
-    "telegraf": "^4.4.2",
-    "yaml": "^1.10.2"
+    "giphy-api": "2.0.2",
+    "telegraf": "4.4.2",
+    "yaml": "1.10.2"
   },
   "engines": {
     "node": ">=8.1.3"
