--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,3 +27,14 @@ updates:
       - 'derogab'
     labels:
       - 'dependencies'
+
+  # Maintain dependencies for Docker
+  - package-ecosystem: 'docker'
+    directory: '/'
+    target-branch: 'dev'
+    schedule:
+      interval: 'monthly'
+    assignees:
+      - 'derogab'
+    labels:
+      - 'dependencies'
