Replace configs w/ environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     container_name: clownbot
     image: derogab/clownbot:latest
     restart: always
+    env_file:
+      - .env
     volumes:
       - './private:/bot/private'
