--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "url": "https://github.com/derogab/clownbot/issues"
   },
   "dependencies": {
+    "dotenv": "16.4.5",
     "giphy-api": "2.0.2",
     "telegraf": "4.16.3",
     "yaml": "2.4.1"
   },
   "engines": {
     "node": ">=8.1.3"
-  },
-  "devDependencies": {}
+  }
 }
