--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "giphy-api": "2.0.2",
-    "telegraf": "4.16.3",
-    "yaml": "2.4.1"
+    "telegraf": "4.16.3"
   },
   "engines": {
     "node": ">=8.1.3"
